# uav_service

./: README.md  capture_1.py
rtsp/: c2h264.py  config.py  pic_1.py  rtsp_loop_record.py
scripts/: install_service.sh  install_task_dispatcher_service.sh  multi_algo_manager_arm.service  multi_algo_manager_x86.service  task_dispatcher_arm.service  task_dispatcher_x86.service
src/multi_algo_interfaces/: CMakeLists.txt  package.xml
src/multi_algo_manager/: package.xml  setup.cfg  setup.py
src/multi_algo_manager/multi_algo_manager/: algo_manager_node.py
src/multi_algo_manager/multi_algo_manager/algos/: base.py  channel_monitor.py  device_check.py  device_check_result_process.py  gpio_control.py  gpio_controller.py  line_integrity.py  tracker_manager.py  trash_detect.py  utils.py
src/robot_interface/: CMakeLists.txt  package.xml
src/robot_interface/docs/: control_interface.md  dispatch_interface.md
src/robot_interface/interface/common/: RequestHeader.msg  ResponseHeader.msg
src/robot_interface/interface/control/msg/: CtrlMode.msg  CtrlState.msg  EulerAngle.msg  JointData.msg  MotionData.msg  Move.msg  Quaternion.msg  RetCode.msg  RobotState.msg  Vector3.msg
src/robot_interface/interface/control/srv/: Move.srv  SetCtrlMode.srv
src/robot_interface/interface/dispatch/action/: Inspect.action
src/task_dispatcher/: package.xml  setup.cfg  setup.py
src/task_dispatcher/launch/: task_dispatcher.launch.py
src/task_dispatcher/task_dispatcher/: alarm_reporter.py  auth_utils.py  cloud_compare_icp.py  command_deliver.py  config.py  cruise_task_manager.py  cruise_uav_task_manager.py  device_control.py  device_status_report.py  dock_control_client.py  initial_pose_manager.py  map_manager.py  message_cache.py  perform_action_manager.py  point_cloud_compress.py  point_cloud_crop.py  point_cloud_manager.py  point_cloud_persistor.py  preflight_check_node.py  ptz_control.py  registration.py  remote_control.py  ros2_topic_subscriber.py  rtsp_record_manager.py  rtsp_record_manager_ffmpeg.py  service_manager.py  simulate_alarm_publisher.py  status_report.py  task_dispatcher_node.py  task_manual_manager.py  test_cruise_task_manager.py  uav_action_manager.py  uav_command_sender.py  uav_mission_core.py  uav_mission_manager.py  video_preview_manager.py
